welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: not found: value True
		vuBiscuit = True;
                            ^Program:12: error: not found: value True
			if (estSurBiscuit()) {vuBiscuit = True};
                                                          ^Program:14: error: type mismatch;
 found   : Unit
 required: Boolean
		for (x <- 1 to 6) {
                       ^